# sled-search

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
tests/: search.rs
