[package]
name = "sled-search"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "Utility functions for searching a `sled::Tree`"
readme = "README.md"
keywords = ["sled", "db", "binary", "search", "tree"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mitchmindtree/sled-search.git"
homepage = "https://github.com/mitchmindtree/sled-search"

[dependencies]
sled = "0.15"
